# SHA-256

./: CHANGELOG.md  README.md  sha256.cabal
app/: Main.hs
code/: CHANGELOG.md  sha256.cabal  test.tx  test.txt
code/app/: Main.hs
code/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
code/dist-newstyle/packagedb/ghc-8.10.7/: package.cache  sha256-0.1.0.0-inplace.conf
code/src/: Sha256.hs
dist-newstyle/cache/: config  plan.json  solver-plan  source-hashes
scr/: sha256.hs
