cabal-version:      2.4
name:               sha256
version:            0.1.0.0

description:        Hash a string or file using SHA-256
bug-reports:        https://github.com/ForgiveWifi/SHA-256/issues

author:             JT Sgro
maintainer:         forgivewifi@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Sha256
    hs-source-dirs:   src
    build-depends:    base >=4.7 && <5
    default-language: Haskell2010

executable sha256
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
